# doublechoco-solver

./: .clang-format  CMakeLists.txt  LICENSE  README.md  format.sh
src/: Balancer.cc  Balancer.h  BoardManager.cc  BoardManager.h  Connecter.cc  Connecter.h  EmMain.cc  EvolminoMain.cc  Grid.h  Group.cc  Group.h  Main.cc  Problem.cc  Problem.h  Propagator.cc  Propagator.h  Shape.cc  Shape.h  ShapeFinder.cc  ShapeFinder.h  SimplePropagator.h  SizeChecker.cc  SizeChecker.h  Solver.cc  Solver.h
src/doublechoco/: Balancer.cc  Balancer.h  BoardManager.cc  BoardManager.h  Problem.cc  Problem.h  Propagator.cc  Propagator.h  Shape.cc  Solver.cc  Solver.h
src/evolmino/: BoardManager.cc  BoardManager.h  Problem.cc  Problem.h  Propagator.cc  Propagator.h  Solver.cc  Solver.h
